# clis

./: .cursorrules  .gitignore  CHANGELOG.md  COMPARISON_STATUS.md  COMPLETE_SESSION_SUMMARY.md  CONTEXT_MANAGEMENT_AND_AUTO_APPROVE.md  FEATURE_COMPLETION_REPORT.md  IMPROVEMENTS_IMPLEMENTED.md  LOOP_DETECTION_FIX.md  PEVL_FIXES_SUMMARY.md  README.md  TEST_OBSERVATIONS.md  TEST_SUMMARY.md  analyze_todos.py  app.py  pyproject.toml  test_comparison.md  test_efficient_learning.py  test_improvements.py  test_strategic_planning.py  test_strategic_planning_output.txt
docs/: CLAUDE_TOOLS_ANALYSIS.md  LSP_TOOLS_GUIDE.md  PRIORITY_TOOLS_IMPLEMENTATION.md
examples/: memory_system_demo.py  parallel_and_streaming_demo.py  tool_calling_demo.py
skills/: docker.md  file-search.md  git.md  network-tools.md  package-manager.md  system-info.md
src/clis/: __init__.py  __main__.py  cli.py
src/clis/agent/: __init__.py  agent.py  context_manager.py  episodic_memory.py  interactive_agent.py  memory_manager.py  pevl_agent.py  planner.py  shared_memory.py  state_machine.py  subtask_manager.py  task_analyzer.py  tool_calling.py  two_phase_agent.py  vector_search.py  working_directory.py  working_memory.py
src/clis/cli/: __init__.py  memory_cli.py  run_cli.py  skill_cli.py  system_cli.py
src/clis/cli_commands/: __init__.py  config_cli.py  memory_cli.py  run_cli.py  skill_cli.py  system_cli.py
src/clis/config/: __init__.py  manager.py  models.py
src/clis/executor/: __init__.py  executor.py
src/clis/output/: __init__.py  console.py  error_display.py  formatter.py
src/clis/router/: __init__.py  matcher.py  router.py
src/clis/safety/: __init__.py  blacklist.py  middleware.py  risk_scorer.py
src/clis/skills/: __init__.py  parser.py  validator.py  vector_search.py
tests/: COMPARISON_ANALYSIS.md  README_COMPARISON_TEST.md  __init__.py  conftest.py  quick_test_results.json  test_agent_comparison.py  test_pevl_basic.py  test_quick_comparison.py  test_report.md  test_results.json  test_scenarios.json  test_tools.py
(+68 files in other folders)
