[project]
name = "clis"
version = "0.1.0"
description = "A programmable terminal assistant with Skill-based SOP execution"
readme = "README.md"
authors = [
    { name = "Eski Yin", email = "eski.yin@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "rich>=13.7.0",
    "markdown-it-py>=3.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
]
keywords = ["cli", "terminal", "ai", "assistant", "automation", "skill"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
clis = "clis.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/eskiyin/clis"
Repository = "https://github.com/eskiyin/clis"
Documentation = "https://github.com/eskiyin/clis#readme"
Issues = "https://github.com/eskiyin/clis/issues"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/clis --cov-report=term-missing --cov-report=html"
